Issue: add dark mode toggle mechanism to body but color.module.scss does not work on it

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -105,6 +105,11 @@ section {
 }
 body {
   line-height: 1;
+
+  @include color.themify(color.$themes) {
+    background-color: color.themed("background");
+    color: color.themed("textPrimary");
+  }
 }
 ol,
 ul {
