--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,9 +7,9 @@
   margin-top: 20px;
   margin-bottom: 52px;
 
-  @include color.themify(color.$themes) {
-    background-color: themed("background");
-  }
+  // @include color.themify(color.$themes) {
+  //   background-color: color.themed("background");
+  // }
 
   .logo {
     width: 32px;
