--- a/src/styles/color.module.scss
+++ b/src/styles/color.module.scss
@@ -10,7 +10,6 @@ $point-primary: #8f19e8;
 $search: #cdcdcd;
 $warning: #ff5252;
 
-
 $themes: (
   light: (
     background: $background-light,
@@ -26,11 +25,11 @@ $themes: (
   // Iterate through $themes, $theme as key (light, dark) and $map (background: #fff) as value
   @each $theme, $map in $themes {
     // Create dynamic selector using interpolation
-    .#{$theme} & {
+    :global(.#{$theme}) & {
       // Create a global var to store theme specific value
       $theme-map: () !global;
       // Iterate through $theme, $key as key (background) and $sub-map as value (#fff)
-      @each $key, $sub-map in $theme {
+      @each $key, $sub-map in $map {
         $value: map-get(map-get($themes, $theme), "#{$key}");
         $theme-map: map-merge(
           $theme-map,
@@ -40,7 +39,7 @@ $themes: (
         ) !global;
       }
       @content;
-      // $theme-map: null !global;
+      $theme-map: null !global;
     }
   }
 }
